# can_encoder_decoder

./: CMakeLists.txt
include/: candefs.h  decoder.h  encoder.h  utils.h
src/: CMakeLists.txt  decoder.c  encoder.c  main.c  utils.c
tests/: CMakeLists.txt  RunAllTests.cpp  test_utils.cpp
tests/encoder/: test_decoder.cpp  test_encoder.cpp
